# firefly-client-js

./: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proto-gen.sh  tsconfig.json
example/: encrypted.ts  encrypted_server.ts  encrypted_server_wasm.ts  index.html  simple_test.ts  test.ts
mls-wasm/: Cargo.toml  build.sh  rust-analyzer.cargo.extraEnv
mls-wasm/src/: config.rs  lib.rs
protobufs/: message.proto
src/: index.ts  service.ts  store.ts  websocket.ts
src/protos/: message.ts
