[package]
name = "mls-wasm"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.99"
console_error_panic_hook = "0.1.7"
mls-rs = "0.50.1"
mls-rs-codec = "0.7.0"
mls-rs-crypto-webcrypto = "0.11.0"
thiserror = "2.0.16"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["console"] }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
mls-rs-crypto-openssl = "0.17.0"



# [target.'cfg(target_arch="wasm32")'.dependencies]
